@@ -1,14 +1,20 @@
-# @(#)$Ident: XML.pm 2013-12-25 21:54 pjf ;
+# @(#)$Ident: XML.pm 2014-01-12 17:35 pjf ;
 
 package File::DataClass::Storage::XML;
 
 use 5.01;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.27.%d', q$Rev: 2 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.27.%d', q$Rev: 7 $ =~ /\d+/gmx );
 
 use Moo;
 use File::DataClass::Constants;
-use File::DataClass::Types  qw( ArrayRef HashRefOfBools Str );
+use File::DataClass::Functions qw( extension_map );
+use File::DataClass::Types     qw( ArrayRef HashRefOfBools Str );
+
+BEGIN {
+   extension_map 'XML::Simple' => '.xml';
+   extension_map 'XML::Bare'   => '.xml';
+}
 
 extends q(File::DataClass::Storage);
 
@@ -107,7 +113,7 @@ File::DataClass::Storage::XML - Read/write XML data storage model
 
 =head1 Version
 
-This document describes version v0.27.$Rev: 2 $
+This document describes version v0.27.$Rev: 7 $
 
 =head1 Synopsis
 
